--- a/1. responsive-web-design/basic-html.html
+++ b/1. responsive-web-design/basic-html.html
@@ -11,15 +11,27 @@
             Click here to view more <a href="#" target="_blank">cat photos</a>.
         </p>
 
-        <img src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back.">
+        <a>
+            <img src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back.">
+        </a>
 
-        <p>
-            Kitty ipsum dolor sit amet, shed everywhere shed everywhere stretching attack your ankles chase the red dot, hairball run catnip eat the grass sniff.
-        </p>
+        <p>Things cats love:</p>
+        <ul>
+            <li>cat nip</li>
+            <li>laser pointers</li>
+            <li>lasagna</li>
+        </ul>
         
-        <p>
-            Purr jump eat the grass rip the couch scratched sunbathe, shed everywhere rip the couch sleep in the sink fluffy fur catnip scratched
-        </p>
+        <p>Top 3 things cats hate:</p>
+        <ol>
+            <li>flea treatment</li>
+            <li>thunder</li>
+            <li>other cats</li>
+        </ol>
+
+        <input type="text">
     </main>
 
-</body></html>
+</body>
+
+</html>
