added form and submit button to page

--- a/1. responsive-web-design/basic-html.html
+++ b/1. responsive-web-design/basic-html.html
@@ -21,7 +21,7 @@
             <li>laser pointers</li>
             <li>lasagna</li>
         </ul>
-        
+
         <p>Top 3 things cats hate:</p>
         <ol>
             <li>flea treatment</li>
@@ -29,7 +29,9 @@
             <li>other cats</li>
         </ol>
 
-        <input type="text">
+        <form action="/submit-cat-photo">
+            <input type="text" placeholder="cat photo URL">
+        </form>
     </main>
 
 </body>
