adding radio buttons and checkboxes

--- a/1. responsive-web-design/basic-html.html
+++ b/1. responsive-web-design/basic-html.html
@@ -30,7 +30,26 @@
         </ol>
 
         <form action="/submit-cat-photo">
-            <input type="text" placeholder="cat photo URL">
+            <label for="indoor">
+                <input id="indoor" type="radio" name="indoor-outdoor"> Indoor
+            </label>
+            <label for="outdoor">
+                <input id="outdoor" type="radio" name="indoor-outdoor"> Outdoor
+            </label>
+            <br>
+
+            <label for="loving">
+                <input id="loving" type="checkbox" name="personality">Loving
+            </label>
+            <label for="caring">
+                <input id="caring" type="checkbox" name="personality">Caring
+            </label>
+            <label for="patient">
+                <input id="patient" type="checkbox" name="personality">Patient
+            </label>
+
+            <input type="text" placeholder="cat photo URL" required>
+            <button type="submit">Submit</button>
         </form>
     </main>
 
