--- a/1. responsive-web-design/basic-html.html
+++ b/1. responsive-web-design/basic-html.html
@@ -15,39 +15,48 @@
             <img src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back.">
         </a>
 
-        <p>Things cats love:</p>
-        <ul>
-            <li>cat nip</li>
-            <li>laser pointers</li>
-            <li>lasagna</li>
-        </ul>
+        <!-- A list of things that cats love and hate -->
+        <div>
+            <p>Things cats love:</p>
+            <ul>
+                <li>cat nip</li>
+                <li>laser pointers</li>
+                <li>lasagna</li>
+            </ul>
 
-        <p>Top 3 things cats hate:</p>
-        <ol>
-            <li>flea treatment</li>
-            <li>thunder</li>
-            <li>other cats</li>
-        </ol>
+            <p>Top 3 things cats hate:</p>
+            <ol>
+                <li>flea treatment</li>
+                <li>thunder</li>
+                <li>other cats</li>
+            </ol>
+        </div>
 
         <form action="/submit-cat-photo">
+            <!-- Radio Buttons -->
             <label for="indoor">
-                <input id="indoor" type="radio" name="indoor-outdoor"> Indoor
+                <input id="indoor" type="radio" name="indoor-outdoor" value="indoor" checked> Indoor
             </label>
             <label for="outdoor">
-                <input id="outdoor" type="radio" name="indoor-outdoor"> Outdoor
+                <input id="outdoor" type="radio" name="indoor-outdoor" value="outdoor"> Outdoor
             </label>
             <br>
 
-            <label for="loving">
-                <input id="loving" type="checkbox" name="personality">Loving
+            <!-- Checkboxes -->
+            <label for="lazy">
+                <input id="lazy" type="checkbox" name="personality" value="lazy" checked>
+                lazy
             </label>
-            <label for="caring">
-                <input id="caring" type="checkbox" name="personality">Caring
+            <label for="sleepy">
+                <input id="sleepy" type="checkbox" name="personality" value="sleepy">
+                sleepy
             </label>
-            <label for="patient">
-                <input id="patient" type="checkbox" name="personality">Patient
+            <label for="cranky">
+                <input id="cranky" type="checkbox" name="personality" value="cranky">
+                cranky
             </label>
 
+            <!-- Submit -->
             <input type="text" placeholder="cat photo URL" required>
             <button type="submit">Submit</button>
         </form>
