added google font to header and styled in css

--- a/1. responsive-web-design/basic.html
+++ b/1. responsive-web-design/basic.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html>
 
+<!-- Metadata elements -->
 <head>
+    <title>The cat page</title>
+    <link rel="stylesheet" href="basic.css">
+    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
 </head>
 
+<!-- Page content -->
 <body>
-    <h2>CatPhotoApp</h2>
+    <h2 class="red-text">CatPhotoApp</h2>
     <main>
-        <p>
+        <p class="red-text">
             Click here to view more <a href="#" target="_blank">cat photos</a>.
         </p>
 
