added styling options with classes

--- a/1. responsive-web-design/basic.html
+++ b/1. responsive-web-design/basic.html
@@ -16,12 +16,12 @@
             Click here to view more <a href="#" target="_blank">cat photos</a>.
         </p>
 
-        <a>
-            <img src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back.">
+        <a href="#">
+            <img class="smaller-text" src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back.">
         </a>
 
         <!-- A list of things that cats love and hate -->
-        <div>
+        <div class="silver-background">
             <p>Things cats love:</p>
             <ul>
                 <li>cat nip</li>
