added small use of id styling

--- a/1. responsive-web-design/basic.html
+++ b/1. responsive-web-design/basic.html
@@ -37,7 +37,7 @@
             </ol>
         </div>
 
-        <form action="/submit-cat-photo">
+        <form id="cat-photo-form" action="/submit-cat-photo">
             <!-- Radio Buttons -->
             <label for="indoor">
                 <input id="indoor" type="radio" name="indoor-outdoor" value="indoor" checked> Indoor
