--- a/1. responsive-web-design/basic.html
+++ b/1. responsive-web-design/basic.html
@@ -12,7 +12,7 @@
 <body>
     <h2 class="red-text">CatPhotoApp</h2>
     <main>
-        <p class="red-text">
+        <p id="orange-text" class="red-text pink-text blue-text">
             Click here to view more <a href="#" target="_blank">cat photos</a>.
         </p>
 
