testing relative vs absolute positioning

--- a/1. responsive-web-design/applied-visual.html
+++ b/1. responsive-web-design/applied-visual.html
@@ -1,17 +1,42 @@
 <!DOCTYPE html>
 
 <html>
-<div class="fullCard">
-    <div class="cardContent">
-        <div class="cardText">
-            <h4>Google</h4>
-            <p>Google was founded by Larry Page and Sergey Brin while they were Ph.D. students at Stanford University.</p>
-        </div>
-        <div class="cardLinks">
-            <a href="https://en.wikipedia.org/wiki/Larry_Page" target="_blank" class="links">Larry Page</a>
-            <a href="https://en.wikipedia.org/wiki/Sergey_Brin" target="_blank" class="links">Sergey Brin</a>
+
+<head>
+    <title>Google Alphabet Page</title>
+    <link rel="stylesheet" href="applied-visual.css">
+</head>
+
+<body>
+    <div class="fullCard" id="thumbnail">
+        <div class="cardContent">
+            <div class="cardText">
+                <h4>
+                    <s>Google</s>Alphabet
+                </h4>
+
+                <hr>
+
+                <p>
+                    <em>
+                        Google was founded by Larry Page and Sergey Brin while they were <u>Ph.D. students</u> at <strong>Stanford University.</strong>
+                    </em>
+                </p>
+            </div>
+            <div class="cardLinks">
+                <a href="https://en.wikipedia.org/wiki/Larry_Page" target="_blank" class="links">Larry Page</a>
+                <a href="https://en.wikipedia.org/wiki/Sergey_Brin" target="_blank" class="links">Sergey Brin</a>
+            </div>
         </div>
     </div>
-</div>
+    
+    <section>
+        <a class="box" href="#">Move me!</a>
+    </section>
+    
+    <section>
+        <a class="abs-box">What's the difference?</a>
+    </section>
+</body>
 
 </html>
