added use of transform, z-index prioritisation, scale and centreing using margin

--- a/1. responsive-web-design/applied-visual.html
+++ b/1. responsive-web-design/applied-visual.html
@@ -29,14 +29,29 @@
             </div>
         </div>
     </div>
-    
+
     <section>
         <a class="box" href="#">Move me!</a>
     </section>
-    
+
     <section>
         <a class="abs-box">What's the difference?</a>
     </section>
+
+    <!-- Layering using z-index() -->
+    <div class="first"></div>
+    <div class="second"></div>
+
+    <!-- Centering using margin:auto -->
+    <div class="margin-centred"></div>
+
+    <!-- Transform: Scale -->
+    <div class="ball" id="ball1"></div>
+    <div class="ball" id="ball2"></div>
+
+    <!-- Transform: Skew -->
+    <div id="top"></div>
+    <div id="bottom"></div>
 </body>
 
 </html>
