--- a/1. responsive-web-design/applied-visual.html
+++ b/1. responsive-web-design/applied-visual.html
@@ -52,6 +52,10 @@
     <!-- Transform: Skew -->
     <div id="top"></div>
     <div id="bottom"></div>
+    
+    <!-- Graphic using CSS -->
+    <div class="moon"></div>
+    <div class="heart"></div>
 </body>
 
 </html>
