--- a/1. responsive-web-design/applied-visual.html
+++ b/1. responsive-web-design/applied-visual.html
@@ -56,6 +56,11 @@
     <!-- Graphic using CSS -->
     <div class="moon"></div>
     <div class="heart"></div>
+    
+    <!-- Animation in CSS -->
+    <div id="rect"></div>
+    
+    <button>Register</button>
 </body>
 
 </html>
