added 'applied accessibility' - an exploration of using semantic code for more accessible webpages

--- a/1. responsive-web-design/accessibility.html
+++ b/1. responsive-web-design/accessibility.html
@@ -4,5 +4,15 @@
     </head>
     <body>
         <img src="">
+        
+        <main>
+            <h1>21 Savington, the British Poet</h1>
+        </main>
+        
+        <article class="blog-posts">
+            <section class="recent">
+                <h2>Having a lot of money</h2>
+            </section>
+        </article>
     </body>
 </html>
