--- a/e. flexbox/box.html
+++ b/e. flexbox/box.html
@@ -11,6 +11,10 @@
     <div id="box-container">
         <div id="box-1"></div>
         <div id="box-2"></div>
+        <div id="box-3"></div>
+        <div id="box-4"></div>
+        <div id="box-5"></div>
+        <div id="box-6"></div>
     </div>
 </body>
 
