--- a/f. grid/grid.html
+++ b/f. grid/grid.html
@@ -9,11 +9,11 @@
 
 <body>
     <div class="container">
-        <div class="d1">1</div>
-        <div class="d2">2</div>
-        <div class="d3">3</div>
-        <div class="d4">4</div>
-        <div class="d5">5</div>
+        <div class="item1">1</div>
+        <div class="item2">2</div>
+        <div class="item3">3</div>
+        <div class="item4">4</div>
+        <div class="item5">5</div>
     </div>
 </body>
 
