--- a/g. responsive-projects/tribute.html
+++ b/g. responsive-projects/tribute.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-    <main id=main>
+    <main id="main">
         <header>
-            <h1 id=title>Frank Ocean</h1>
+            <h1 id="title">Frank Ocean</h1>
             
             <section id="tribute-info">
                 Christopher Edwin Breaux, professionally known as Frank Ocean, was born on the 28th of October, 1987 in New Orleans, Louisiana, and has earned cult-icon status with his enigmatic persona and idiosyncratic approach to pop.
@@ -20,7 +20,7 @@
 
         <div id="img-div">
             <figure>
-                <img id="image" src="https://media.gq.com/photos/5c2e6f4ae2ba2768724ebb8f/master/w_1600%2Cc_limit/frank-ocean-cover-gq-february-2019-02.jpg" alt="Frank Ocean">
+                <img id="image" src="https://media.gq.com/photos/5c2e6f4ae2ba2768724ebb8f/master/w_1600%2Cc_limit/frank-ocean-cover-gq-february-2019-02.jpg" alt="Frank Ocean posing for a GQ Photoshoot">
                 
                 <figcaption id="img-caption">Photo credit: GQ</figcaption>
             </figure>
