--- a/g. responsive-projects/survey.html
+++ b/g. responsive-projects/survey.html
@@ -12,27 +12,27 @@
     <header>
         <h1 id="title">Family Feud: Survey Says</h1>
 
-        <section id="about">
+        <p id="description">
             Participate in this week's survey as an online voter!
-        </section>
+        </p>
     </header>
 
     <main>
         <fieldset>
-            <form>
+            <form id="survey-form">
                 <div class="form-group">
-                    <label for="name">Name</label>
-                    <input type="text" id="name" name="name">
+                    <label for="name" id="name-label">Name</label>
+                    <input type="text" id="name" name="name" placeholder="Enter your name">
                 </div>
 
                 <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" id="email" name="email">
+                    <label for="email" id="email-label">Email</label>
+                    <input type="email" id="email" name="email" placeholder="steve@familyfeud.com">
                 </div>
 
                 <div class="form-group">
-                    <label for="age">Age (optional)</label>
-                    <input type="number" id="age" name="age">
+                    <label for="age" id="number-label">Age (optional)</label>
+                    <input type="number" id="age" name="age" min=18 max="80" placeholder="Enter an age (18 - 80)">
                 </div>
 
                 <div class="form-group">
@@ -69,8 +69,8 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="next-guest">What celebrity family would you like to see next?</label>
-                    <select id="next-guest" name="next-guest">
+                    <label for="dropdown">What celebrity family would you like to see next?</label>
+                    <select id="dropdown" name="next-guest">
                         <option disabled selected>Select an family...</option>
                         <option value="kanye">Kanye West (The West Family)</option>
                         <option value="gates">Bill Gates (The Gates Family)</option>
