still struggling with the nav bar alignment, ill fix it tomorrow

--- a/g. responsive-projects/landing.html
+++ b/g. responsive-projects/landing.html
@@ -11,8 +11,8 @@
 <body>
     <header>
         <nav id="nav-bar">
-            <a id="logo header-img" href="https://www.microsoft.com/">
-                <img src="https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE1MmB8?ver=6c43g" alt="Microsoft Logo">
+            <a id="logo" href="https://www.microsoft.com/">
+                <img id="header-img" src="https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE1MmB8?ver=6c43g" alt="Microsoft Logo">
                 <!--<span role="presentation" aria-hidden="true">Microsoft</span>-->
             </a>
 
@@ -65,7 +65,7 @@
             </div>
 
             <form class="nav-menu">
-                <input type="search" name="search" placeholder="Search Microsoft.com">
+                <input id="search" type="search" name="search" placeholder="Search Microsoft.com">
             </form>
         </nav>
 
