fixed up navbar, added logo components, added flex for projects container. still need to add imagery and make it nicer - very barebones atm

--- a/g. responsive-projects/portfolio.html
+++ b/g. responsive-projects/portfolio.html
@@ -8,41 +8,49 @@
 <body>
     <main>
         <header>
+            <a href="https://www.microsoft.com" class="logo-item">
+                <div class="logo"></div>
+            </a>
             <nav id="navbar">
                 <ul>
                     <li>
-                        <a href="#welcome" class="nav-link">Welcome</a>
+                        <a href="#welcome-section" class="nav-link">Welcome</a>
                     </li>
                     <li>
                         <a href="#projects" class="nav-link">Projects</a>
                     </li>
                     <li>
-                        <a id="profile-link" class="nav-link" href="https://www.github.com/ryotokuro">GitHub</a>
+                        <a id="profile-link" class="nav-link" href="https://www.github.com/ryotokuro" target="_blank">GitHub</a>
                     </li>
                 </ul>
             </nav>
+            <form class="form-item">
+                <div class="search">Search ></div>
+            </form>
         </header>
 
 
         <!-- Welcome Section -->
-        <section id="welcome">
+        <section id="welcome-section">
             <h1>A Microsoft Softie</h1>
             <p>Hey </p>
         </section>
 
         <section id="projects">
             <h2>Projects</h2>
-            <div class="project-tile">
-                <a href="https://codepen.io/ryotokuro/pen/jOPZjEG">Survey Says</a>
-            </div>
-            <div class="project-tile">
-                <a href="https://codepen.io/ryotokuro/pen/ExjQMMx">Tribute Page</a>
-            </div>
-            <div class="project-tile">
-                <a href="https://codepen.io/ryotokuro/pen/xxGWmxb">Microsoft Neo</a>
-            </div>
-            <div class="project-tile">
-                <a href="https://codepen.io/ryotokuro/pen/bGdMXVo">JavaScript Documentation</a>
+            <div id="project-container">
+                <div class="project-tile">
+                    <a href="https://codepen.io/ryotokuro/pen/jOPZjEG">Survey Says</a>
+                </div>
+                <div class="project-tile">
+                    <a href="https://codepen.io/ryotokuro/pen/ExjQMMx">Tribute Page</a>
+                </div>
+                <div class="project-tile">
+                    <a href="https://codepen.io/ryotokuro/pen/xxGWmxb">Microsoft Neo</a>
+                </div>
+                <div class="project-tile">
+                    <a href="https://codepen.io/ryotokuro/pen/bGdMXVo">JavaScript Documentation</a>
+                </div>
             </div>
         </section>
     </main>
